traefik-dash/traefik-ing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`ion-cluster.home`) && PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      middlewares:
        - name: nginx-ingress-auth
          namespace: kube-system
      services:
        - kind: TraefikService
          name: api@internal
